--- a/environment.yaml
+++ b/environment.yaml
@@ -25,7 +25,7 @@ dependencies:
   - click=8.0.1=pyhd3eb1b0_0
   - coverage=5.5=py38h27cfd23_2
   - cryptography=3.4.7=py38hd23ed53_0
-  - cudatoolkit=10.2.89=hfd86e86_1
+  - cudatoolkit=11.1.1=h6406543_8
   - cython=0.29.24=py38h295c915_0
   - dbus=1.13.18=hb2f20db_0
   - expat=2.2.10=he6710b0_2
@@ -88,7 +88,7 @@ dependencies:
   - python=3.8.5=h7579374_1
   - python-gnupg=0.4.7=pyhd8ed1ab_0
   - python_abi=3.8=2_cp38
-  - pytorch=1.9.0=py3.8_cuda10.2_cudnn7.6.5_0
+  - pytorch=1.9.0=py3.8_cuda11.1_cudnn8.0.5_0
   - qt=5.9.7=h5867ecd_1
   - readline=8.1=h27cfd23_0
   - regex=2021.8.3=py38h7f8727e_0
@@ -101,7 +101,7 @@ dependencies:
   - tk=8.6.10=hbc83047_0
   - toml=0.10.2=pyhd3eb1b0_0
   - torchaudio=0.9.0=py38
-  - torchvision=0.10.0=py38_cu102
+  - torchvision=0.10.0=py38_cu111
   - typed-ast=1.4.3=py38h7f8727e_1
   - wheel=0.36.2=pyhd3eb1b0_0
   - xz=5.2.5=h7b6447c_0
